fix overflow-x

--- a/GPA/css/style.css
+++ b/GPA/css/style.css
@@ -4,6 +4,7 @@
 }
 body{
     height: 98vh;
+    overflow-x:hidden ;
 }
 button {
     margin-left: auto;
